--- a/RedTechBackEnd/Properties/launchSettings.json
+++ b/RedTechBackEnd/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7294;http://localhost:5280",
+      "applicationUrl": "https://localhost:7294;http://localhost:5280;https://main.doswhcwk3hoxd.amplifyapp.com/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
